Change path to config and log files; minor miscellaneous changes.

--- a/clzb.conf
+++ b/clzb.conf
@@ -5,10 +5,9 @@
 
 ;;; Policies
 
-;;; Policies instruct how old snapshots are pruned.
-;;; Each DEFINE-POLICY form is given a name to refer to in subsequent DEFINE-TARGET and
-;;; DEFINE-SOURCE declarations. The body consists of a single property list with the following
-;;; keyword symbols being recognized:
+;;; Policies instruct how old snapshots are pruned. Each DEFINE-POLICY form is given a name to refer
+;;; to in subsequent DEFINE-TARGET and DEFINE-SOURCE declarations. The body consists of a single
+;;; property list with the following keyword symbols being recognized:
 
 ;;; :LAST
 ;;; Keep every snapshot for the past N hours.
@@ -74,7 +73,7 @@
    ;; the user name to connect with.
    :user "user"
    ;; The ZFS filesystem that will house backups. Note that this is expanded to
-   ;; "backup/<source-hostname>/<source-base-path>" and any missing datasets are created
+   ;; "backup/<source-hostname>/<source-path>" and any missing datasets are created
    ;; automatically on the first seeding.
    :base-path "backup"))
 
@@ -127,7 +126,7 @@
    :targets ((server1 :policy server1-home)
              (server2 :policy server2-home))))
 
-;;; process
+;;; Process
 
 ;;; The process has no name and describes the overall application process. Here we list both of our
 ;;; sources to be periodically snapshotted, replicated and pruned according to the above
@@ -142,11 +141,11 @@
    ;; to maintain a more consistent period).
    :interval 10
    ;; The log level (verbosity) to use for displaying messages to the terminal's output. Available
-   ;; levels are: :TRACE, :DEBUG, :INFO, :NOTICE, :WARN, and :ERROR. The specified level and all
-   ;; levels above it are emitted.
+   ;; levels are: :TRACE, :DEBUG, :INFO, :NOTICE, :WARN, :ERROR, and :FATAL. The specified level and
+   ;; all levels above it are emitted.
    :terminal-log-level :info
    ;; The log level to use for writing messages to the log file on disk. The log file is located at
-   ;; $XDG_DATA_HOME/cl-zfs-backup/cl-zfs-backup.log. Note that :TRACE is very noisy and will likely
-   ;; accumulate a lot of storage requirements over time. It is therefor best used only when a full
-   ;; log is needed when submitting bug reports.
+   ;; $XDG_DATA_HOME/clzb/clzb.log. Note that :TRACE is very noisy and will likely accumulate a lot
+   ;; of storage requirements over time. It is therefor best used only when a full log is needed
+   ;; when submitting bug reports.
    :file-log-level :debug))
